fixed some weird spacing that was happing with overflow of component upon window resizing.

--- a/concert-finder/src/Header.css
+++ b/concert-finder/src/Header.css
@@ -4,15 +4,17 @@
     width: 100%;
     height: 10%;
     top: 0;
+    overflow: auto;
+    scrollbar-width: none;
 }
 
 .headerButton {
     background: transparent;
     border: transparent;
-    margin: 15px;
+    margin: calc(4px + 2vmin);
     color: white;
     font-weight: 700;
-    font-size: large;
+    font-size: calc(8px + 2vmin);
     letter-spacing: 0.05em;
     text-shadow: 1px 1px 1px #c6c6c6, 1px 2px 1px #919191;
 }
